--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@material-tailwind/react": "^2.1.9",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
